# amber-api

./: .clippy.toml  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  amber-2.0.0.yml  biome.json  cliff.toml  prek.toml  release-plz.toml
.config/: nextest.toml
.github/: copilot-instructions.md
.github/instructions/: rust.instructions.md
.github/worfklows/: test.yml
.github/workflows/: release-plz.yml  release-pr.yml  release.yml  test.yml
examples/: README.md  current_prices.rs  current_prices_complete.rs  get_sites.rs  prices.rs  renewables.rs  renewables_complete.rs  renewables_with_resolution.rs  usage.rs
scripts/: check-ci-scripts-used  check-no-embedded-bash  version.sh
scripts/ci/: check-release-commit  create-or-update-pr  lib.sh  prepare-release  publish-release  run-examples
src/: client.rs  error.rs  lib.rs  models.rs
tests/: integration.rs
