#:schema https://www.schemastore.org/cargo.json

[package]
name        = "amber-api"
version     = "2.1.1"
description = "Rust client for Amber Electric's API"
readme      = "README.md"
repository  = "https://github.com/JP-Ellis/amber-api"
license     = "MIT"
keywords    = ["amber", "amber-electric", "api"]
categories  = ["api-bindings"]

edition = "2024"

# All examples require the HTTP client (std feature)
[[example]]
name              = "current_prices"
required-features = ["std"]

[[example]]
name              = "current_prices_complete"
required-features = ["std"]

[[example]]
name              = "get_sites"
required-features = ["std"]

[[example]]
name              = "prices"
required-features = ["std"]

[[example]]
name              = "renewables"
required-features = ["std"]

[[example]]
name              = "renewables_complete"
required-features = ["std"]

[[example]]
name              = "renewables_with_resolution"
required-features = ["std"]

[[example]]
name              = "usage"
required-features = ["std"]

[dependencies]
bon       = { version = "3", default-features = false, features = ["alloc"] }
jiff      = { version = "0.2", default-features = false, features = [
  "alloc",
  "perf-inline",
  "serde",
] }
reqwest   = { version = "0.13", default-features = false, features = [
  "json",
  "query",
  "rustls",
], optional = true }
serde     = { version = "1", default-features = false, features = [
  "alloc",
  "derive",
] }
thiserror = { version = "2", default-features = false }
tokio     = { version = "1", default-features = false, features = ["time"], optional = true }
tracing   = { version = "0.1", default-features = false, features = [
  "attributes",
  "log",
] }

[dev-dependencies]
anyhow            = "=1.0.102"
insta             = "=1.47.2"
jiff              = { version = "=0.2.24", default-features = false, features = [
  "alloc",
  "perf-inline",
  "serde",
  "std",
] }
pretty_assertions = "=1.4.1"
rstest            = "=0.26.1"
serde_json        = "=1.0.149"
tokio             = { version = "=1.52.2", features = [
  "macros",
  "rt-multi-thread"
] }

[features]
default = ["std"]
std     = ["reqwest", "thiserror/std", "tokio"]

[lints]
  [lints.clippy]
  # Lower the priority of groups to allow overriding individual lints
  cargo       = { level = "warn", priority = -1 }
  complexity  = { level = "warn", priority = -1 }
  correctness = { level = "warn", priority = -1 }
  pedantic    = { level = "warn", priority = -1 }
  perf        = { level = "warn", priority = -1 }
  restriction = { level = "warn", priority = -1 }
  style       = { level = "warn", priority = -1 }
  suspicious  = { level = "warn", priority = -1 }

  # The restriction group contains lints which Clippy deems as opt-in. I prefer
  # using an opt-out approach.
  blanket-clippy-restriction-lints = "allow"

  arbitrary_source_item_ordering = "allow"
  cognitive_complexity           = "allow"
  else_if_without_else           = "allow"
  impl_trait_in_params           = "allow"
  implicit_return                = "allow"
  min_ident_chars                = "allow"
  missing_trait_methods          = "allow"
  multiple_crate_versions        = "allow"
  pattern_type_mismatch          = "allow"
  pub_with_shorthand             = "allow"
  question_mark_used             = "allow"
  ref_patterns                   = "allow"
  self_named_module_files        = "allow"
  separated_literal_suffix       = "allow"
  single_call_fn                 = "allow"
  single_char_lifetime_names     = "allow"
  unreachable                    = "allow"

  # TODO: Revisit this once https://github.com/rust-lang/rust-clippy/issues/14056
  # is resolved.
  panic_in_result_fn = "allow"

  [lints.rust]
  future-incompatible = "warn"
  missing_docs        = "warn"
  warnings            = "warn"

  [lints.rustdoc]
  missing-crate-level-docs = "warn"
